--- a/src/resources/elements/home/weather-main/weather-main.scss
+++ b/src/resources/elements/home/weather-main/weather-main.scss
@@ -23,7 +23,8 @@
             .item__main-information {
                 display: flex;
                 flex-direction: column;
-                margin-right: 10px;
+                margin-right: 10px;                
+                width: 100px;
 
                 .item__weather-type {
                     padding-left: 2px;
@@ -33,10 +34,20 @@
             }
 
             .item__weather-temperature {                
-               
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100px;
+
                 .item__temperature-degree {
                     font-weight: 400;
                  }
+
+                .item__icon {
+                    margin-left: 5px;
+                    width: 50px;
+                    height: 50px;
+                }
             }
         }
     }
@@ -49,5 +60,6 @@
     .list__item:last-child {
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
+        border-bottom: 0;
     }
 }
