--- a/src/resources/elements/home/weather-main/weather-main.scss
+++ b/src/resources/elements/home/weather-main/weather-main.scss
@@ -1,8 +1,9 @@
+@import './weathers';
+
 .au-main__list {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
 
     .list__item {
         display: flex;
@@ -14,12 +15,20 @@
         padding-left: 10px;
         border-bottom: 1px solid rgba($color: #000000, $alpha: .3);
         box-sizing: border-box;
+        transition: 0.3s transform ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+            transform: scale(1.02);
+        }
 
         .item {
             display: flex;            
             align-items: center;
             height: inherit;
-
+            color: white;
+            transform: scale(1);
+            
             .item__main-information {
                 display: flex;
                 flex-direction: column;
