add new bg add new styles

--- a/src/resources/elements/home/weather-main/weathers.scss
+++ b/src/resources/elements/home/weather-main/weathers.scss
@@ -30,3 +30,10 @@
 .weather-fog-night {
     background-image: url('../../../../../static/img/weather/fog-night.jpg');
 }
+
+.weather-snow-day {
+    background-image: url('../../../../../static/img/weather/snow-day.jpg');
+}
+.weather-snow-night {
+    background-image: url('../../../../../static/img/weather/snow-night.jpg');
+}
