--- a/src/resources/elements/home/weather-main/add-city/add-city.scss
+++ b/src/resources/elements/home/weather-main/add-city/add-city.scss
@@ -1,6 +1,8 @@
 .au-add-city__input {
     display: flex;
     height: 40px;
+    width: 400px;
+    align-items: center;
     margin-bottom: 20px;
 
     .add-city__input {
@@ -34,6 +36,13 @@
         width: 120px;
         margin-left: 15px;
         cursor: pointer;        
-        background-color: #afea9c;
+        background-color: #afea9c;        
+        transition: 0.2s all;
+
+        &:focus {            
+        outline: 1px solid rgba(0, 0, 0, 0.03);
+        border-radius: 2px;
+        box-shadow: 0px 0px 3px 0px black;
+        }
     }
 }
