--- a/src/resources/elements/home/weather-main/weather-main.scss
+++ b/src/resources/elements/home/weather-main/weather-main.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 700px;
+    box-sizing: border-box;
 
     .list__item {
         display: flex;
@@ -14,7 +16,8 @@
         font-weight: 200;
         padding-left: 10px;
         border-bottom: 1px solid rgba($color: #000000, $alpha: .3);
-        box-sizing: border-box;
+        box-sizing: border-box;        
+        transform: scale(1);
         transition: 0.3s transform ease-in-out;
         cursor: pointer;
 
@@ -27,14 +30,18 @@
             align-items: center;
             height: inherit;
             color: white;
-            transform: scale(1);
             
             .item__main-information {
                 display: flex;
                 flex-direction: column;
                 margin-right: 10px;                
-                width: 100px;
-
+                max-width: 190px;
+                .item__name {
+                    .name__country {
+                        vertical-align: middle;
+                        font-size: 0.55em;
+                    }
+                }
                 .item__weather-type {
                     padding-left: 2px;
                     padding-top: 3px;
@@ -70,5 +77,11 @@
         border-bottom-left-radius: 3px;
         border-bottom-right-radius: 3px;
         border-bottom: 0;
+    }
+
+    .au-main__pagination {
+        display: flex;
+        justify-content: center;
+        cursor: pointer;
     }
 }
