--- a/src/resources/elements/home/weather-main/weathers.scss
+++ b/src/resources/elements/home/weather-main/weathers.scss
@@ -17,6 +17,13 @@
     background-image: url('../../../../../static/img/weather/rain-night.jpg');
 }
 
+.weather-thunderstorm-day {
+    background-image: url('../../../../../static/img/weather/thunderstorm-day.jpg');
+}
+.weather-thunderstorm-night {
+    background-image: url('../../../../../static/img/weather/thunderstorm-night.jpg');
+}
+
 .weather-clear-day {
     background-image: url('../../../../../static/img/weather/clear-day.jpg');
 }
