--- a/src/resources/elements/home/home.scss
+++ b/src/resources/elements/home/home.scss
@@ -2,6 +2,8 @@
     display: flex;
     height: 120px;
     padding-left: 30px;
+    position: relative;
+    z-index: 2;
 
     .au-header__caption {
         h1 {
@@ -15,10 +17,17 @@
 .au-main {
     display: flex;
     height: calc(100% - 120px);
-    margin: 0 40px;
+    margin: 0 40px;    
+    position: relative;
+    z-index: 2;
 
     > .au-target {
         width: 100%;
     }
+}
 
+.canvas {    
+    position: absolute;
+    width: 100%;
+    z-index: 1;
 }
