--- a/src/resources/elements/home/weather-main/weather-main.scss
+++ b/src/resources/elements/home/weather-main/weather-main.scss
@@ -6,6 +6,10 @@
     width: 100%;
     height: 700px;
     box-sizing: border-box;
+    
+    .list__item.active-item {
+        transform: scale(1.05);
+    }
 
     .list__item {
         display: flex;
@@ -23,7 +27,7 @@
         position: relative;
 
         &:hover {
-            transform: scale(1.02);
+            transform: scale(1.05);
         }
 
         .item {
@@ -37,6 +41,7 @@
                 flex-direction: column;
                 margin-right: 10px;                
                 max-width: 190px;
+
                 .item__name {
                     .name__country {
                         vertical-align: middle;
