add changes for styles

--- a/src/resources/elements/home/weather-main/add-city/add-city.scss
+++ b/src/resources/elements/home/weather-main/add-city/add-city.scss
@@ -14,6 +14,7 @@
         background-color: transparent;
         transition: 0.2s border-bottom ease-in;        
         box-sizing: border-box;
+        color: lightgreen;
     }
 
     .add-city__input:focus {
